# light-s3-client

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish-test.yml  python-publish.yml  version-check.yml
.hooks/: sync_version.py
light_s3_client/: __init__.py
light_s3_client.egg-info/: PKG-INFO
workflows/: pypi.yml
