[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "light-s3-client"
version = "0.0.19"
description = "A lightweight S3 client."
authors = [
	{ name = "socket.dev", email = "info@socket.dev" }
]
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
	"requests~=2.31.0",
	"xmltodict~=0.13.0"
]

[tool.hatch.version]
path = "light_s3_client/__init__.py"
pattern = "^__version__ = ['\"](?P<version>[^'\"]*)['\"]$"

[tool.hatch.build.targets.sdist]
include = ["light_s3_client/**"]