[metadata]

name = lights3client
version = 0.0.9
author = Douglas Coburn
author_email = douglas@dactbc.com
description = A lightweight S3 client that does not rely on boto3
long_description = file: README.rd
license = MIT
classifiers =
    Programming Language :: Python :: 3
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"

[options]
python_requires = >=3.6
install_requires =
    requests